# solana-infra-doctor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.id.md  README.md  SECURITY.md  _typos.toml  action.yml  codecov.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  good_first_issue.yml  real_run_report.yml
.github/workflows/: action-selftest.yml  audit.yml  ci.yml  publish-crates.yml  release-binaries.yml  typos.yml  verified-commits.yml
assets/: README.md
docs/: cli-output.md  glossary.md  readme-screenshots.md  roadmap.md  rpc-readiness-report.md  terminal-screenshots.md
docs/audit/: commands-used.md  grpc-real-run.md  last-verified.md  real-run-matrix.md
docs/contributing/: add-a-check.md  add-a-report-example.md  first-contribution.md  real-run-evidence.md  seed-issues.md
docs/playbooks/: bot-rpc-readiness.md  ci-rpc-gate.md  indexer-readiness.md  provider-comparison.md  wallet-backend-readiness.md
examples/: mixed-network-rejection.md
examples/reports/: compare-bot-live.md  compare-bot-report.md  compare-indexer-data-live.md  compare-indexer-report.md  grpc-check-real-mainnet-tatum-redacted-retry.md  grpc-check-real-mainnet-tatum-redacted.md  rpc-comparison-multi-provider.md  token-readiness-report.md
examples/terminal/: check-data-mainnet.txt  check-devnet.txt  check-json-mainnet.txt  check-mainnet.txt  check-samples-mainnet.txt  compare-bot.txt  compare-data-indexer.txt  compare-mainnet-publicnode.txt  grpc-check-blocked-private-endpoint-required.txt  grpc-check-real-mainnet-tatum-redacted-retry.txt  grpc-check-real-mainnet-tatum-redacted.txt  grpc-compare-blocked-private-endpoint-required.txt  ws-logs-mainnet.txt  ws-mainnet.txt
scripts/: capture-readme-screenshots.sh
src/: checks.rs  cli.rs  color.rs  compare.rs  error.rs  latency.rs  lib.rs  main.rs  redact.rs  report.rs  rpc.rs  verdict.rs
src/checks/: mod.rs  verdict.rs
src/compare/: mod.rs  render.rs  scoring.rs
src/grpc/: check.rs  endpoint.rs  error_kind.rs  mod.rs  render.rs
src/grpc/compare/: mod.rs  render.rs  scoring.rs
src/output/: mod.rs  style.rs  table.rs
src/rpc/: mod.rs  models.rs  resilience.rs
src/ws/: analysis.rs  mod.rs  subscription.rs
tests/: coverage.rs  grpc.rs
