[package]
name = "solana-infra-doctor"
version = "0.5.1"
edition = "2021"
rust-version = "1.76"
description = "A Rust CLI for Solana RPC production-readiness diagnostics, comparison, and WebSocket checks."
license = "MIT OR Apache-2.0"
repository = "https://github.com/satyakwok/solana-infra-doctor"
readme = "README.md"
keywords = ["solana", "rpc", "cli", "diagnostics", "rust"]
categories = ["command-line-utilities", "development-tools"]
# Screenshots are large and only used in the rendered README; keep them out of
# the published crate.
exclude = ["docs/images/"]

[[bin]]
name = "sol-doctor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "net"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
