[package]
name = "solana-infra-doctor"
version = "0.10.0"
edition = "2021"
rust-version = "1.85"
description = "A Rust CLI for Solana RPC production-readiness diagnostics, comparison, and WebSocket checks."
license = "MIT OR Apache-2.0"
repository = "https://github.com/satyakwok/solana-infra-doctor"
readme = "README.md"
keywords = ["solana", "rpc", "cli", "diagnostics", "rust"]
categories = ["command-line-utilities", "development-tools"]
# Screenshots and branding assets are large and only used in the rendered README
# / GitHub pages; keep them out of the published crate.
exclude = ["docs/images/", "assets/"]

[[bin]]
name = "sol-doctor"
path = "src/main.rs"

# `cargo binstall` support: fetch the prebuilt binary attached to the GitHub
# Release by the release-binaries workflow instead of compiling from source.
# Archives are named `sol-doctor-<target>` with the binary at the archive root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sol-doctor-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
reliakit-backoff = "0.1.0"
reliakit-ratelimit = "0.1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "net"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
